WIP - need the new gradle version